Add dnd functionalities, add drop preview, create WidgetProperties component, rename components and variables

--- a/src/Widget.css
+++ b/src/Widget.css
@@ -11,3 +11,11 @@
 .button {
     background-color: #2190d9;
 }
+
+.text {
+    background-color: lightcoral;
+}
+
+.empty {
+    background: none;
+}
