--- a/src/Phone.css
+++ b/src/Phone.css
@@ -1,9 +1,10 @@
-.phone-view {
+.phone {
     background-color: white;
     border-radius: 50px;
     height: 812px !important;
     width: 375px !important;
     margin-left: 200px;
+    margin-right: 200px;
     align-content: center;
     overflow: hidden;
 }
