Fix position for the library and the widget prop

--- a/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
+++ b/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
@@ -1,7 +1,8 @@
 .widget-properties {
     background-color: #3c414e;
     font-size: 14px;
-    height: 80vh;
+    height: 98vh;
     width: 20vh;
     padding: 2vh !important;
+    right: 0;
 }
