Add codelink button in WidgetProperties.js (not working yet), fix getter and setter from widget object in Layout.js, fix display issue on image widget

--- a/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
+++ b/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
@@ -6,3 +6,11 @@
     padding: 2vh !important;
     right: 0;
 }
+
+.MuiFormControl-root {
+    margin-left: 5px !important;
+}
+
+.MuiInputBase-input {
+    padding: 6px 7px !important;
+}
