--- a/src/Components/Main/Components/Phone/Components/Widget/Widget.css
+++ b/src/Components/Main/Components/Phone/Components/Widget/Widget.css
@@ -1,10 +1,9 @@
 
 .widget {
     text-align: center;
-    padding: 10px 50px 10px 50px;
+    padding: 3% 10%;
     border-radius: 5px;
     cursor: pointer;
-    margin-bottom: 20px;
     height: fit-content;
 }
 
