--- a/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
+++ b/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
@@ -1,8 +1,8 @@
 .widget-properties {
-    background-color: #3c414e;
+    background-color: #333333;
     font-size: 14px;
     height: 98vh;
-    width: 30vh;
+    width: 25vh;
     padding: 2vh !important;
     right: 0;
 }
@@ -36,4 +36,20 @@
     width: 80px;
     margin-right: 8px;
     text-align: right;
+}
+
+input {
+    background-color: #292929 !important;
+}
+
+.codelink-button {
+    background-color: #242424 !important;
+    color: #b3b3b3 !important;
+}
+
+#menu- > div.MuiPaper-root.MuiMenu-paper.MuiPopover-paper.MuiPaper-elevation8.MuiPaper-rounded {
+    background-color: #565656 !important;
+    color: white;
+    width: 150px;
+    margin-top: 50px;
 }
