--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 
 .App-header {
-  background-color: #282c34;
+  background-color: #191919;
   min-height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #8b8b8b;
 }
