--- a/src/Components/Main/Components/Phone/Components/Widget/Widget.css
+++ b/src/Components/Main/Components/Phone/Components/Widget/Widget.css
@@ -5,6 +5,9 @@
     border-radius: 5px;
     cursor: pointer;
     height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .widget.button {
@@ -21,7 +24,6 @@
 
 .widget.image {
     background-color: lightpink;
-    padding: 100px;
 }
 
 .widget.empty {
