--- a/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
+++ b/src/Components/Main/Components/WidgetProperties/WidgetProperties.css
@@ -9,6 +9,7 @@
 
 .widget-properties.MuiList-root {
     position: fixed !important;
+    top: 35px;
 }
 
 .widget-properties .MuiListItem-gutters {
