--- a/src/Components/Main/Components/Menu/Dropdrownmenu.css
+++ b/src/Components/Main/Components/Menu/Dropdrownmenu.css
@@ -87,16 +87,18 @@ a {
     top: 58px;
     width: 300px;
     transform: translateX(-45%);
-    background-color: var(--bg);
+    background-color: #1d1d1d;
     border: var(--border);
     border-radius: var(--border-radius);
     padding: 1rem;
     overflow: hidden;
     transition: height var(--speed) ease;
+    border-color: #969696;
 }
 
 .menu {
     width: 100%;
+    font-size: 24px;
 }
 
 .menu-item {
