Make createModal a Promise, modal can now be a loading screen, add messages for create and flutter modals
Former-commit-id: 96d515922f8470c107ccafb0b1e60615c9c9eded

--- a/src/Components/Main/Components/Dialog/Modal.css
+++ b/src/Components/Main/Components/Dialog/Modal.css
@@ -8,3 +8,23 @@
 .MuiSvgIcon-root {
     cursor: pointer;
 }
+
+.loading {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    z-index: 1000;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-tap-highlight-color: transparent;
+}
+
+.loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
