add widgetsList in CodeLink / search bar in progress
Former-commit-id: cc8ed8628e488fd4bb031ec80051252b176b1269

--- a/src/Components/CodeLink/CodeLink.css
+++ b/src/Components/CodeLink/CodeLink.css
@@ -17,6 +17,12 @@
     background-color: #1c1c1c;
 }
 
+.CodeLink-widget-content {
+    margin-top: 15px;
+    overflow: auto;
+    max-height: 800px;
+}
+
 .CodeLink-canvas {
     background-color: #282c34;
 }
