Fix display of widgets and give name on codelink history push
Former-commit-id: 4868f52235f874cc15a9c7b31f2db7c1f75e8233

--- a/src/Components/Main/Components/Phone/Components/Layout/Layout.css
+++ b/src/Components/Main/Components/Phone/Components/Layout/Layout.css
@@ -1,13 +1,13 @@
 
-.column {
+.Column {
     background-color: lightsalmon;
 }
 
-.row {
+.Row {
     background-color: lightgreen;
 }
 
-.center {
+.Center {
     background-color: lightskyblue;
 }
 
