Modif Login design / Add name in CodeLink widget list / Fix crash no project Drag&Drop and run / Uncomment User Authentication
Former-commit-id: 62eb9f28224d34713e8a289c37a291b782981408

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -4,7 +4,7 @@
 
 .login-wrapper {
     color: #282c34;
-    margin-top: 5rem;
+    margin-top: 1rem;
     border: #8e8e8e;
     border-radius: 16px;
     padding: 2rem;
@@ -22,7 +22,7 @@
 }
 
 .login-header-title {
-    background-color: indianred;
+    background-color: royalblue;
     color: #eeeeee;
     border: #8e8e8e;
     border-radius: 16px;
@@ -35,9 +35,9 @@
 }
 
 .login-submit {
-    padding-top: 2rem;
+    padding-top: 1rem;
 }
 
 .login-redirect {
-    padding-top: 2rem;
+    padding-top: 1rem;
 }
