General improvement on UI/UX, add prop types, add applied method on widgets, create separate files for each prop types
Former-commit-id: 044a65abf3552200d0f204c4b683c35536551f8f

--- a/src/Components/Main/Components/Phone/Components/Layout/Layout.css
+++ b/src/Components/Main/Components/Phone/Components/Layout/Layout.css
@@ -11,6 +11,21 @@
     border-color: lightsalmon;
 }
 
+.stack {
+    border-color: mediumpurple;
+}
+
+.layout.stack > div {
+    position: absolute;
+}
+
+.layout.padding {
+    height: auto;
+    min-height: 40px;
+    width: auto;
+    min-width: 40px;
+}
+
 .layout.base {
     background-color: white;
 }
