--- a/src/Components/CodeLink/CodeLink.css
+++ b/src/Components/CodeLink/CodeLink.css
@@ -1,24 +1,25 @@
 
 .CodeLink-Content {
-    background-color: #282c34;
-    color: #aaaaaa;
+    background-color: #292929;
+    color: #8b8b8b;
 }
 
 .CodeLink-bar-menu {
-    background-color: #282c34;
-    padding-bottom: 1rem;
+    background-color: #292929;
+    border: 1px solid #1c1c1c;
 }
 
 .CodeLink-bar-item {
-    margin-left: 2rem;
+    margin: 0 0.5rem !important;
+    width: auto !important;
 }
 
 .CodeLink-widget-menu {
-    background-color: #1c1c1c;
+    background-color: #292929;
 }
 
 .CodeLink-canvas {
-    background-color: #282c34;
+    background-color: #212121;
 }
 
 .CodeLink-canvas-Box {
