--- a/src/Components/Main/Components/Menu/Dropdrownmenu.css
+++ b/src/Components/Main/Components/Menu/Dropdrownmenu.css
@@ -37,7 +37,7 @@ a {
 
 /* <nav> */
 .navbar {
-    background-color: #333333;
+    background-color: #292929;
     padding: 0 1rem;
     border: 1px solid #1c1c1c;
 }
@@ -46,7 +46,7 @@ a {
 .navbar-nav {
     max-width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 /* <li> */
