--- a/src/Components/Main/Components/Menu/Dropdrownmenu.css
+++ b/src/Components/Main/Components/Menu/Dropdrownmenu.css
@@ -57,6 +57,10 @@ a {
     justify-content: center;
 }
 
+.MuiBadge-colorPrimary {
+    background-color: #57b53f !important;
+}
+
 /* Icon Button */
 .icon-button {
     --button-size: calc(var(--nav-size) * 0.5);
