List clickable emulators and devices, prop var name handle duplicated name
Former-commit-id: 4b7a19cc6e646b02b26f0f41439dd6d3c36f4b19

--- a/src/Components/Main/Components/Menu/Dropdrownmenu.css
+++ b/src/Components/Main/Components/Menu/Dropdrownmenu.css
@@ -51,7 +51,8 @@ a {
 
 /* <li> */
 .nav-item {
-    width: calc(var(--nav-size) * 0.8);
+    /* width: calc(var(--nav-size) * 0.8); */
+    margin-right: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
