--- a/src/Components/Main/Components/Phone/Phone.css
+++ b/src/Components/Main/Components/Phone/Phone.css
@@ -1,4 +1,7 @@
 .phone {
+    position: relative;
+    margin: 40px auto;
+    box-shadow: 0px 0px 0px 11px #1f1f1f, 0px 0px 0px 13px #191919, 0px 0px 0px 20px #111;
     border: 5px solid #111111;
     background-color: white;
     border-radius: 50px;
@@ -6,6 +9,57 @@
     width: 375px !important;
     align-content: center;
     overflow: auto;
+
+&:before,&:after {
+              content: '';
+              position: absolute;
+              left: 50%;
+              transform: translateX(-50%);
+          }
+}
+
+.notch {
+    height: 45px;
+    width: 218px;
+    background: #1f1f1f;
+    margin: auto;
+    align-content: center;
+    border-radius: 0px 0px 40px 40px;
+    border-bottom: 5px solid #111111;
+}
+
+i,
+b {
+    position: absolute;
+    display: block;
+    color: transparent;
+}
+
+i {
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%, 6px);
+    height: 8px;
+    width: 15%;
+    background-color: #101010;
+    border-radius: 8px;
+    box-shadow: inset 0px -3px 3px 0px rgba(256, 256, 256, 0.2);
+}
+
+.layout.root {
+    padding-top: 0px !important;
+    height: 762px !important;
+}
+
+b {
+    left: 14%;
+    top: 10px;
+    transform: translate(180px, 4px);
+    width: 12px;
+    height: 12px;
+    background-color: #101010;
+    border-radius: 12px;
+    box-shadow: inset 0px -3px 2px 0px rgba(256, 256, 256, 0.2);
 }
 
 .phone-h {
