--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -45,13 +45,13 @@
 }
 
 .register-box {
-    background-color: #383838 !important;
+    background-color: #8b453f !important;
     color: #b3b3b3;
     border-radius: 16px;
     text-align: center !important;
     justify-content: center !important;
     margin-top: 2rem !important;
-    padding: 5px !important;
+    padding: 15px !important;
 }
 
 .register-button {
