Add WidgetTree with drag and drop compatibility, add hover and select effects on widgets, fix emulator refresh button
Former-commit-id: 0bee93301abfa34a1746cbf0db66a0a858e71c07

--- a/src/Components/Main/Components/Phone/Components/Widget/Widget.css
+++ b/src/Components/Main/Components/Phone/Components/Widget/Widget.css
@@ -10,6 +10,22 @@
     align-items: center;
     font-size: 15px;
     color: black;
+    border: transparent 3px solid;
+}
+
+.widget:hover {
+    border: deepskyblue 3px solid;
+    border-radius: 2px;
+}
+
+.hover {
+    border: deepskyblue 3px solid !important;
+    border-radius: 2px;
+}
+
+.selected {
+    border: springgreen 3px solid !important;
+    border-radius: 2px;
 }
 
 .widget.textbutton {
@@ -32,7 +48,7 @@
     background: none;
 }
 
-.widget.selected {
-    outline: #2190d9 1px solid !important;
-    outline-offset: 10px;
-}
+/*.widget.selected {*/
+/*    outline: #2190d9 1px solid !important;*/
+/*    outline-offset: 10px;*/
+/*}*/
