Add visualiser, add hover on widget outline the correct widget on phone view
Former-commit-id: f5335b203d1482b763d43b1adb66ebc10b301027

--- a/src/Components/Main/Components/Phone/Components/Widget/Widget.css
+++ b/src/Components/Main/Components/Phone/Components/Widget/Widget.css
@@ -28,6 +28,10 @@
     border-radius: 2px;
 }
 
+.visualiser {
+    border: transparent !important;
+}
+
 .widget.textbutton {
     background-color: #2190d9;
 }
