Handle stream process when external process is suddenly closed, show run progress in icon
Former-commit-id: 7b65cdda7ff677a73806a167208ba15b51aff229

--- a/src/Components/Main/Components/Menu/Dropdrownmenu.css
+++ b/src/Components/Main/Components/Menu/Dropdrownmenu.css
@@ -58,8 +58,12 @@ a {
     justify-content: center;
 }
 
-.MuiBadge-colorPrimary {
+.running .MuiBadge-colorPrimary {
     background-color: #57b53f !important;
+}
+
+.MuiBadge-colorPrimary  {
+    background-color: #fad010 !important;
 }
 
 /* Icon Button */
