--- a/src/Components/Main/Components/Menu/Menu.css
+++ b/src/Components/Main/Components/Menu/Menu.css
@@ -40,3 +40,12 @@
 .emulator-list-menu .MuiButton-root {
     width: 100%;
 }
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
